--- a/_layouts/customer.html
+++ b/_layouts/customer.html
@@ -70,7 +70,7 @@ layout: page
         </div>
 
 
-        <div class="col-lg-4 col-xs-12">
+        <div class="col-lg-4 col-xs-12 zenbox">
             <div class="col-12 zenhub">
                 <p class="box-title">Zenhub</p>
                 <a href="#">View Zenhub Board</a>
