--- a/_layouts/customer.html
+++ b/_layouts/customer.html
@@ -12,7 +12,7 @@ layout: page
                         <p>Message board:</p>
                     </div>
                     <div class="col-6 offset-lg-3 col-lg-3">
-                        <a href="/boards"><p>Back to the board</p></a>
+                        <a href="/boards"><p>Back to your boards</p></a>
                     </div>
                 </div>
                 <p class="cost-name box-title">{{ page.name }}</p>
@@ -120,5 +120,4 @@ layout: page
 
 
 
-{% include scripts/plugins.html %}
 <script src="/js/board.js"></script>
