--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -9,6 +9,30 @@
   position: fixed;
   width: 100%;
   top: 0;
+
+  .boards-popup, .logout-popup {
+    display: none;
+  }
+
+  .navigation-right {
+    display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content: space-between;
+
+    .nav-btn {
+      margin: 0 20px 0 0;
+      font-size: 13px;
+      padding:3px 5px;
+      color: $white;
+    }
+    .nav-btn:hover {
+      color: $white;
+      text-decoration: none;
+      cursor: pointer;
+    }
+
+  }
 }
 
 .navbar-toggler-icon {
@@ -155,6 +179,8 @@ button:focus {
 
     font-size: 1.3rem;
   }
+
+  
 }
 
 @media only screen and (max-height: 327px) {
@@ -165,12 +191,28 @@ button:focus {
   }
 }
 
+@media only screen and (max-width: 500px) {
+  .popuptext {
+
+    font-size: 2.5rem;
+    padding-top: 25px;
+  }
+}
+
 /* Small devices (phones, 768px and down) */
 
 @media (max-width: 768px) {
 
   .navbar {
     padding: 0 15px;
+
+    .logout-button, .boards-button {
+      display: none !important;
+    }
+  
+    .boards-popup, .logout-popup {
+      display: block;
+    }
   }
 
   .col-sm-4 {
