close #289 projects prolike make zenhub link go to the correct page

--- a/_layouts/customer.html
+++ b/_layouts/customer.html
@@ -73,7 +73,7 @@ layout: page
         <div class="col-lg-4 col-xs-12 zenbox">
             <div class="col-12 zenhub">
                 <p class="box-title">Zenhub</p>
-                <a href="#">View Zenhub Board</a>
+                <a target="_blank" class="zenhub-link" href="#">View Zenhub Board</a>
             </div>
         </div>
 
