close #299 make issue number clickable

--- a/_layouts/customer.html
+++ b/_layouts/customer.html
@@ -42,10 +42,12 @@ layout: page
         <div class="col-lg-4 col-xs-12 newIssue">
             <div class="col-12">
                 <p>Last opened issue:</p>
-                <h2 class="ni-number">#</h2>
+                <a target="_blank" class="ni-link" href="#">
+                    <h2 class="ni-number">#</h2>
+                </a>
                 <h3 class="ni-title box-title"></h3>
                 <p>Created on <span class="ni-time"></span> <br> by <span class="ni-cont"></span></p>
-                <a target="_blank" class="ni-link" href="#">View on Github</a>
+                <a target="_blank" class="ni-link down" href="#">View on Github</a>
             </div>
         </div>
 
@@ -54,10 +56,12 @@ layout: page
         <div class="col-lg-4 col-xs-12 closedIssue">
             <div class="col-12">
                 <p>Last closed issue:</p>
-                <h2 class="ci-number">#</h2>
+                <a target="_blank" class="ci-link" href="#">
+                    <h2 class="ci-number">#</h2>
+                </a>
                 <h3 class="ci-title box-title"></h3>
                 <p>Created on <span class="ci-time"></span> <br> by <span class="ci-cont"></span></p>
-                <a target="_blank" class="ci-link" href="#">View on Github</a>
+                <a target="_blank" class="ci-link down" href="#">View on Github</a>
 
             </div>
         </div>
