--- a/_sass/_customer.scss
+++ b/_sass/_customer.scss
@@ -94,12 +94,11 @@
 
     // ni & ci links
 
-    .ni-link,
-    .ci-link {
+    .down {
 
         position: absolute;
         bottom: 10px;
-        left: 10px;
+        left: 15px;
 
     }
 
