close #300 make zenhub box clickable

--- a/_sass/_customer.scss
+++ b/_sass/_customer.scss
@@ -111,7 +111,7 @@
         flex-direction: column;
         justify-content: center;
 
-        p {
+        .box-title {
             font-size: 35px;
         }
 
