--- a/_layouts/customer.html
+++ b/_layouts/customer.html
@@ -68,10 +68,12 @@ layout: page
 
 
         <div class="col-lg-4 col-xs-12 zenbox">
-            <div class="col-12 zenhub">
-                <p class="box-title">Zenhub</p>
-                <a target="_blank" class="zenhub-link" href="#">View Zenhub Board</a>
-            </div>
+            <a target="_blank" class="zenhub-link" href="#">
+                <div class="col-12 zenhub">
+                    <p class="box-title">Zenhub</p>
+                    <p>View Zenhub Board</p>
+                </div>
+            </a>
         </div>
 
         <div class="col-lg-8 col-xs-12 todo">
