close #303 change message box title

--- a/_layouts/customer.html
+++ b/_layouts/customer.html
@@ -7,7 +7,7 @@ layout: page
     <div class="row">
         <div class="col-lg-8 col-xs-12 msgBoard">
             <div class="col-12">
-                <p>Message board:</p>
+                <p>Project status:</p>
                 <p class="cost-name box-title">{{ page.name }}</p>
                 <p>{{ content }}</p>
             </div>
