close #308 change text on boards overview page

--- a/_layouts/boards.html
+++ b/_layouts/boards.html
@@ -4,7 +4,7 @@ layout: page
 <div class="container boards">
     <div class="row justify-content-center">
         <div class="col-lg-8 col-xs-12 userlogin">
-            <h3>Tilgængelige boards for <span class="username"></span></h3>
+            <h3>Available boards for <span class="username"></span></h3>
         </div>
     </div>
 
