--- a/_includes/components/navigation.html
+++ b/_includes/components/navigation.html
@@ -2,32 +2,32 @@
 
 
 <div class="pos-f-t">
-  <nav class="navbar navbar-dark bg-dark"><a class="navbar-brand" href="/"><img class="col-sm-4"
-        alt="Prolike" src="/images/logos/prolike-logo.png"></a>
-        
-        <div class="navigation-right">
-            <a href="/boards/" class="boards-button nav-btn" style="display: none;">My boards</a>
-            <a class="logout-button nav-btn">Log in</a>
-    <div class="popup" onclick="myFunction()"> <i class="fas fa-bars"></i>
-      <span class="popuptext" id="myPopup">
-        <ul>
-          <li> <a href="/#home" data-proofer-ignore>Home</a></li>
-          <li><a href="/#why" data-proofer-ignore>Why</a></li>
-          <li> <a href="/#how" data-proofer-ignore>How</a></li>
-          <li> <a href="/#what" data-proofer-ignore>What</a></li>
-          {% assign sorted_navi = site.pages | sort: 'order' %}
-          {% for page in sorted_navi %}
-          {% if page.navigation == true %}
+  <nav class="navbar navbar-dark bg-dark"><a class="navbar-brand" href="/"><img class="col-sm-4" alt="Prolike"
+        src="/images/logos/prolike-logo.png"></a>
 
-          <li> <a href="{{ page.url }}" data-proofer-ignore>{{ page.title }}</a></li>
+    <div class="navigation-right">
+      <a href="/boards/" class="boards-button nav-btn" style="display: none;">My boards</a>
+      <a class="logout-button nav-btn">Log in</a>
+      <div class="popup" onclick="myFunction()"> <i class="fas fa-bars"></i>
+        <span class="popuptext" id="myPopup">
+          <ul>
+            <li> <a href="/#home" data-proofer-ignore>Home</a></li>
+            <li><a href="/#why" data-proofer-ignore>Why</a></li>
+            <li> <a href="/#how" data-proofer-ignore>How</a></li>
+            <li> <a href="/#what" data-proofer-ignore>What</a></li>
+            {% assign sorted_navi = site.pages | sort: 'order' %}
+            {% for page in sorted_navi %}
+            {% if page.navigation == true %}
 
-          {% endif %}
-          {% endfor %}
-          <li class="boards-popup"> <a href="/boards/" data-proofer-ignore>My boards</a></li>
-          <li class="logout-popup"> <a class="logout-popup-link" data-proofer-ignore>Log in</a></li>
-        </ul>
-      </span>
+            <li> <a href="{{ page.url }}" data-proofer-ignore>{{ page.title }}</a></li>
+
+            {% endif %}
+            {% endfor %}
+            <li class="boards-popup"> <a href="/boards/" data-proofer-ignore>My boards</a></li>
+            <li class="logout-popup"> <a class="logout-popup-link" data-proofer-ignore>Log in</a></li>
+          </ul>
+        </span>
+      </div>
     </div>
-  </div>
   </nav>
 </div>
