--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -22,8 +22,9 @@
 
     .nav-btn {
       margin: 0 20px 0 0;
-      font-size: 13px;
-      padding:3px 5px;
+      font-size: 1em;
+      font-weight: bold;
+      padding:0px 5px 4px 0px;
       color: $white;
     }
     .nav-btn:hover {
