close #307 get the ccc moodle on board

--- a/_layouts/customer.html
+++ b/_layouts/customer.html
@@ -78,7 +78,7 @@ layout: page
 
         <div class="col-lg-8 col-xs-12 todo">
             <div class="col-12">
-                <p>All issues in To Do:</p>
+                <p>All issues in To Do & Up Next:</p>
                 <div class="todo-list">
 
                 </div>
@@ -89,6 +89,7 @@ layout: page
             <div class="col-12 storypoints">
                 <h3 class="storypoint-number"></h3>
                 <p>story points left</p>
+                <p class="subtext">in To Do & Up Next</p>
             </div>
         </div>
 
