--- a/_sass/_customer.scss
+++ b/_sass/_customer.scss
@@ -173,6 +173,10 @@
             font-size: 2em;
             color: white;
         }
+
+        p.subtext {
+            font-size: 12px;
+        }
     }
 
     // contributors
