--- a/_sass/_boards.scss
+++ b/_sass/_boards.scss
@@ -19,6 +19,7 @@
     align-content: center;
     text-align: center;
     margin-top: 20px;
+    overflow: hidden;
 }
 
 button {
@@ -29,11 +30,12 @@ button {
     padding: 20px;
     margin: 10px;
     border: none;
+    overflow: hidden;
 }
 
 button:hover {
     color: white;
-    transition: 0.5s;
+    transition: 0.8s;
 }
 
 }
