--- a/_layouts/customer.html
+++ b/_layouts/customer.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 ---
-
+<div class="projects">
 <div class="container project">
 
     <div class="row">
@@ -119,5 +119,5 @@ layout: page
 
 
 
-
+</div>
 <script src="/js/board.js"></script>
