--- a/_sass/_customer.scss
+++ b/_sass/_customer.scss
@@ -1,7 +1,14 @@
+.projects {
+    background-color: whitesmoke;
+    margin-top: -15px;
+    padding: 50px 0;
+}
+
 .project {
 
     margin-top: 75px;
     margin-bottom: 20px;
+
 
     .container {
 
