--- a/_sass/_customer.scss
+++ b/_sass/_customer.scss
@@ -60,7 +60,7 @@
         padding: 0px;
 
 
-        .col-10 {
+        .col-lg-10 {
             padding: 0px !important;
         }
 
@@ -74,6 +74,18 @@
             height: auto;
             border-radius: 50%;
         }
+
+        @media (max-width: 768px) {
+            .profile-picture{
+              height: 90% !important;
+              width: auto;
+            }
+
+            .profile-img-box {
+                height: 130px;
+                width: auto;
+            }
+          }
 
     }
 
