--- a/_includes/components/navigation.html
+++ b/_includes/components/navigation.html
@@ -2,8 +2,10 @@
 
 
 <div class="pos-f-t">
-  <nav class="navbar navbar-dark bg-dark"><a class="navbar-brand" href="/"><img class="col-sm-4" alt="Prolike"
-        src="/images/logos/prolike-logo.png"></a>
+  <nav class="navbar navbar-dark bg-dark">
+    <a class="navbar-brand" href="/">
+      <img class="col-xs-4 col-sm-4 Plogo" alt="Prolike" src="/images/logos/prolike-logo.png">
+    </a>
 
     <div class="navigation-right">
       <a href="/boards/" class="boards-button nav-btn" style="display: none;">My boards</a>
