--- a/_sass/_customer.scss
+++ b/_sass/_customer.scss
@@ -2,6 +2,21 @@
     background-color: whitesmoke;
     margin-top: -15px;
     padding: 50px 0;
+
+    .project-status {
+        padding: 0 !important;
+    }
+
+    .project-status-box {
+        color: white;
+        background-color: $prolikeblue;
+        margin: -15px -15px 0 -15px;
+        padding: 30px 30px 15px 30px;
+        z-index: 100;
+
+
+    }
+
 }
 
 .project {
@@ -218,4 +233,19 @@
         }
     }
 
+}
+.card {
+    border: 0;
+    border-radius: 0;
+    .card-header {
+        background-color: #4d4d4d;
+        border-radius: 0;
+        border: 0;
+        .status-link {
+            border: 0;
+            background-color: transparent;
+            color: white;
+        }
+    }
+    
 }
