close #326 set up proxy url again

--- a/_layouts/customer.html
+++ b/_layouts/customer.html
@@ -15,6 +15,7 @@ layout: page
    
                     
                   </div>
+                  </div>
             </div>
 
             <div class="col-lg-4 col-xs-12 profile">
@@ -24,7 +25,7 @@ layout: page
                             <p>you are singed in as:</p>
                         </div>
 
-                        <div class="col-lg-10 col-md-10">
+                        <div class="col-lg-10 col-md-10"> 
                             <p class="profile-name box-title"></p>
                         </div>
 
