--- a/_sass/_customer.scss
+++ b/_sass/_customer.scss
@@ -10,8 +10,8 @@
     .project-status-box {
         color: white;
         background-color: $prolikeblue;
-        margin: -15px -15px 0 -15px;
-        padding: 30px 30px 15px 30px;
+        margin: -15px 0 0 -15px;
+        padding: 30px 0 15px 30px;
         z-index: 100;
 
 
