close #316 mobile styling fix

--- a/_layouts/anythings.html
+++ b/_layouts/anythings.html
@@ -5,8 +5,7 @@ layout: page
 <div class="container-fluid stories_container">
     <div class="story-header">
         <div class="container align-middle">
-            <h2>{{ page.title }}</h2>
-            <h3>Thoughts and scribbles</h3>
+            <h3>Our Stories are our collection of anything and everything<br>Prolike</h3>
         </div>
     </div>
     <div class="container">
