close #331 quick fix for the footer items

--- a/_includes/components/footer.html
+++ b/_includes/components/footer.html
@@ -38,21 +38,21 @@
           </div>
           <div class="col-lg col-xs-6">
             <h1>Our Credo</h1>
-            Lean Software Development<br>
+            <a href="/_posts/2019-11-15-how-we-work.md" data-proofer-ignore>How We Work</a>
             Serverless<br>
             Autonomation<br>
+            Talent Development<br>
             Docker<br>
-            Kaizen<br>
-            Talent Development
+            Kaizen
           </div>
           <div class="col-lg col-xs-6">
             <h1>Services</h1>
+            <a href="/_posts/2019-10-21-website.md" data-proofer-ignore>Websites</a>
+            <a href="/_posts/2019-10-21-software.md" data-proofer-ignore>Software</a>
+            <a href="/_posts/2019-11-06-propay.md" data-proofer-ignore>Propay</a>
             Garage Projects<br>
-            Open Source Contributions<br>
             Team Resources<br>
             Research<br>
-            JAM Stack Development<br>
-            Integrations
           </div>
           <div class="col-lg col-xs-6">
             <h1>Contact</h1>
@@ -60,7 +60,6 @@
             <a
               href="https://datacvr.virk.dk/data/visenhed?enhedstype=virksomhed&id=39464101&soeg=prolike&type=undefined&language=us">VAT
               No.: 39464101</a>
-            intern@prolike.io<br />
             <a href="tel:+45 20 872 530">+45 20 872 530</a>
             <a href="https://goo.gl/maps/Esji6p1mx7x">Allerød Stationsvej 4</a>
             3450 Allerød
