close #332 general styling and minor improvements

--- a/_includes/components/navigation.html
+++ b/_includes/components/navigation.html
@@ -1,10 +1,6 @@
-<!-- Navigation -->
-
-
-<div class="pos-f-t">
-  <nav class="navbar navbar-dark bg-dark">
+<nav class="navbar navbar-dark bg-dark">
     <a class="navbar-brand" href="/">
-      <img class="col-xs-4 col-sm-4 Plogo" alt="Prolike" src="/images/logos/prolike-logo.png">
+      <img class="logo" alt="Prolike" src="/images/logos/prolike-logo.png">
     </a>
 
     <div class="navigation-right">
@@ -30,4 +26,3 @@
       </div>
     </div>
   </nav>
-</div>
