--- a/_sass/_stories.scss
+++ b/_sass/_stories.scss
@@ -32,6 +32,7 @@
         margin-top: 10px;
         margin-bottom: 0;
         font-weight: 700;
+        text-transform: capitalize;
     }
 
     p {
