--- a/_includes/components/footer.html
+++ b/_includes/components/footer.html
@@ -18,10 +18,9 @@
 {%if include.caption%}{{include.caption}}<p>{%else%}add "caption=your caption here" to the include<p>{%endif%}
     {% endcapture %}
 
-    <section class="bg-primary" id="{{sectionid || strip || strip_newlines}}">
-      <div class="container">
+    <footer id="{{sectionid || strip || strip_newlines}}">
         <div class="row">
-          <div class="col-lg col-xs-6">
+          <div class="col-lg col-sm-12 col-xs-12">
             <h1>Navigation</h1>
             <a href="/#home" data-proofer-ignore>Prolike</a>
             <a href="/#why" data-proofer-ignore>Why</a>
@@ -30,46 +29,43 @@
             {% assign sorted_navi = site.pages | sort: 'order' %}
             {% for page in sorted_navi %}
             {% if page.navigation == true %}
-
             <a href="{{ page.url }}" data-proofer-ignore>{{ page.title }}</a>
-
             {% endif %}
             {% endfor %}
           </div>
-          <div class="col-lg col-xs-6">
+          <div class="col-lg col-sm-12 col-xs-12">
             <h1>Our Credo</h1>
             <a href="/_posts/2019-11-15-how-we-work.md" data-proofer-ignore>How We Work</a>
-            Serverless<br>
-            Autonomation<br>
-            Talent Development<br>
-            Docker<br>
-            Kaizen
+            <p>Serverless</p>
+            <p>Autonomation</p>
+            <p>Talent Development</p>
+            <p>Docker</p>
+            <p>Kaizen</p>
           </div>
-          <div class="col-lg col-xs-6">
+          <div class="col-lg col-sm-12 col-xs-12">
             <h1>Services</h1>
             <a href="/_posts/2019-10-21-website.md" data-proofer-ignore>Websites</a>
             <a href="/_posts/2019-10-21-software.md" data-proofer-ignore>Software</a>
             <a href="/_posts/2019-11-06-propay.md" data-proofer-ignore>Propay</a>
-            Garage Projects<br>
-            Team Resources<br>
-            Research<br>
+            <p>Garage Projects</p>
+            <p>Team Resources</p>
+            <p>Research</p>
           </div>
-          <div class="col-lg col-xs-6">
+          <div class="col-lg col-sm-12 col-xs-12">
             <h1>Contact</h1>
             <a href="mailto:hey@prolike.io?Subject=Hello%20again" target="_blank">hey@prolike.io</a>
-            <a
-              href="https://datacvr.virk.dk/data/visenhed?enhedstype=virksomhed&id=39464101&soeg=prolike&type=undefined&language=us">VAT
-              No.: 39464101</a>
+            <a href="https://datacvr.virk.dk/data/visenhed?enhedstype=virksomhed&id=39464101&soeg=prolike&type=undefined&language=us">VAT No.: 39464101</a>
             <a href="tel:+45 20 872 530">+45 20 872 530</a>
             <a href="https://goo.gl/maps/Esji6p1mx7x">Allerød Stationsvej 4</a>
-            3450 Allerød
+            <p>3450 Allerød</p>
+          </div>
+          <div class="col-lg col-sm-12 col-xs-12">
+              <h1>Follow us</h1>
+              <a href="#" target="_blank" title="Facebook!" data-proofer-ignore>Facebook</a>
+              <a href="https://www.instagram.com/prolike_io/" target="_blank" title="Find us on Instagram!" data-proofer-ignore>Instagram</a>
+              <a href="https://twitter.com/prolike5" target="_blank" title="Find us on Twitter!" data-proofer-ignore>Twitter</a>
+              <a href="https://github.com/prolike" target="_blank" title="Find us on Github!" data-proofer-ignore>Github</a>
+              <a href="https://www.linkedin.com/company/prolike/" target="_blank" title="Find us on LinkedIn!" data-proofer-ignore>Linkedin</a>
           </div>
         </div>
-      </div>
-      <div class="social-media-links">
-        <a href="https://www.instagram.com/prolike_io/" target="_blank" title="Find us on Instagram!" data-proofer-ignore><i class="fab fa-instagram"></i></a>
-        <a href="https://twitter.com/prolike5" target="_blank" title="Find us on Twitter!" data-proofer-ignore><i class="fab fa-twitter"></i></a>
-        <a href="https://github.com/prolike" target="_blank" title="Find us on Github!" data-proofer-ignore><i class="fab fa-github"></i></a>
-        <a href="https://www.linkedin.com/company/prolike/" target="_blank" title="Find us on LinkedIn!" data-proofer-ignore><i class="fab fa-linkedin-in"></i></a>
-      </div>
-    </section>
+    </footer>
