--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -1,6 +1,14 @@
-.footer {
+footer {
     background: $prolikeblue;
     height: 100vh;
+    width: 100%;
+    padding: 0 10vh;
+    display: flex;
+    align-items: center;
+
+    .row {
+        width: inherit;
+    }
 
     h1 {
         color: $prolikeyellow;
@@ -8,10 +16,19 @@
         font-size: 20px;
     }
 
+    p {
+        font-size: 20px;
+        margin: 0;
+        font-weight: 500;
+        color: $white;
+    }
+
     a {
         font-size: 20px;
         display: block;
         color: $white;
+        margin: 0;
+        font-weight: 500;
     }
 
     a:hover {
@@ -19,46 +36,27 @@
         text-decoration: none;
     }
 
-    .col-lg {
-        color: $white;
-        font-size: 20px;
-    }
-}
-
-.ourfooter {
-    display: flex;
-    justify-content: space-between;
-
-    .bg-primary {
-        width: 100%;
-        position: relative;
-    }
-}
-
-.social-media-links {
-    color: $white;
-    position: absolute;
-    left: 50%;
-    bottom: 20px;
-    transform: translate(-50%, -50%);
-    margin: 0 auto;
-    font-size: 20px;
-    display: inherit;
-
-    .fab {
-        padding: 0 10px;
-    }
-
-    .social-media-links:hover {
-        color: $prolikeyellow;
-    }
 }
 
 @media (max-width: 768px) {
-    .footer {
 
-        h1 {
-            font-size: 17px;
+    footer {
+        height: auto;
+        padding: 10vh 5vh 0 5vh;
+
+        .row {
+            width: initial;
+        }
+
+        .col-sm-12,
+        .col-xs-12 {
+            padding: 0 0 5vh 0;
+
+            p {
+                font-size: 20px;
+                margin: 0;
+                color: $white;
+            }
         }
     }
 }
